# libxslt-os2

./: .gitignore  Makefile.in  aclocal.m4  configure  configure.ac
doc/: Makefile.in
doc/EXSLT/devhelp/: Makefile.in
doc/devhelp/: Makefile.in
libexslt/: Makefile.am  Makefile.in
libxslt/: Makefile.am  Makefile.in  triodef.h
python/: Makefile.in
python/tests/: Makefile.in
tests/: Makefile.in
tests/REC/: Makefile.am
tests/REC1/: Makefile.am
tests/REC2/: Makefile.am
tests/XSLTMark/: Makefile.am  Makefile.in
tests/docbook/: Makefile.am  Makefile.in
tests/documents/: Makefile.am
tests/exslt/common/: Makefile.am
tests/exslt/crypto/: Makefile.am
tests/exslt/date/: Makefile.am
tests/exslt/dynamic/: Makefile.am
tests/exslt/functions/: Makefile.am
tests/exslt/math/: Makefile.am
tests/exslt/saxon/: Makefile.am
tests/exslt/sets/: Makefile.am
tests/exslt/strings/: Makefile.am
tests/extensions/: Makefile.am
tests/fuzz/: Makefile.in
tests/general/: Makefile.am
tests/keys/: Makefile.am
tests/multiple/: Makefile.am  Makefile.in
tests/namespaces/: Makefile.am
tests/numbers/: Makefile.am
tests/plugins/: Makefile.am
tests/reports/: Makefile.am
tests/xinclude/: Makefile.am  Makefile.in
tests/xmlspec/: Makefile.am  Makefile.in
xsltproc/: Makefile.am  Makefile.in  xsltproc.c
